--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-ace": "^14.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.63.0",
+    "react-icons": "^5.5.0",
     "recordrtc": "^5.6.2"
   },
   "devDependencies": {
