--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ace-builds": "^1.43.3",
     "axios": "^1.12.2",
     "jspdf": "^3.0.3",
+    "lucide-react": "^0.545.0",
     "next": "^13.5.11",
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
